--- a/src/main/resources/templates/balance.html
+++ b/src/main/resources/templates/balance.html
@@ -12,24 +12,24 @@
 	<form th:action="@{/balance}" method="post">
 		<div>
 			<label for="amount">Сумма</label>
-			<input type="text" id="amount" name="amount">
+			<input type="number" id="amount" min="0" max="10000" name="amount" required>
 		</div>
 		<div>
 			<label for="cardOwner">Владелец</label>
-			<input type="text" id="cardOwner" name="cardOwner" maxlength="30">
+			<input type="text" id="cardOwner" name="cardOwner" maxlength="30" required>
 		</div>
 		<div>
 			<label for="cvv">CVV</label>
-			<input type="text" id="cvv" name="cvv" pattern="[0-9]{3}" maxlength="3">
+			<input type="number" id="cvv" name="cvv" min="0" max="999" oninput="if (this.value.length > 3) {this.value = this.value.slice(0,3);}" required>
 		</div>
 		<div>
 			<label for="cardNumber">Номер</label>
-			<input type="text" id="cardNumber" name="cardNumber" pattern="[0-9]{16}" maxlength="16">
+			<input type="number" id="cardNumber" name="cardNumber" min="0" max="9999999999999999" oninput="if (this.value.length > 16) {this.value = this.value.slice(0,16);}" required>
 		</div>
 		<div>
 			<label>Срок действия<br>
 			</label>
-			<select name="month" id="month">
+			<select name="month" id="month" required>
 			  <option value="1">Январь</option>
 				<option value="2">Февраль </option>
 				<option value="3">Март</option>
@@ -43,7 +43,7 @@
 				<option value="11">Ноябрь</option>
 				<option value="12">Декабрь</option>
 			</select>
-			<select name = "year" id="year">
+			<select name = "year" id="year" required>
 				<option value="2022"> 2022</option>
 				<option value="2023"> 2023</option>
 				<option value="2024"> 2024</option>
@@ -56,11 +56,11 @@
 		</div>
 		<div>
 			<label for="address">Адрес</label>
-			<input type="text" id="address" name="address">
+			<input type="text" id="address" name="address" required>
 		</div>
 		<div>
 			<label for="postalCode">Почтовый индекс</label>
-			<input type="text" id="postalCode" name="postalCode" pattern="[0-9]{6}" maxlength="6">
+			<input type="text" id="postalCode" name="postalCode" pattern="[0-9]{6}" maxlength="6" required>
 		</div>
 		<div>
 			<input type="submit" id="confirm-purchase" value = "Оплатить">
