--- a/src/main/resources/templates/profile-edit.html
+++ b/src/main/resources/templates/profile-edit.html
@@ -9,7 +9,7 @@
 <div class="container">
     <header th:replace="fragments/header :: 'user-header'"></header>
     <div class="profile">
-        <img class="profile-maxi" src="#">
+        <img class="profile-maxi" th:src="@{/data/avatars/{i}.jpg(i=${user.getId()})}" onerror="this.onerror=null; this.src='/img/guest-icon.jpg'">
     </div>
     <div th:replace="fragments/edit :: ${rel}?'tracks':'info'" class="about"></div>
 </div>
