--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 <div class="container">
     <header th:replace="fragments/header :: ${logged}?'user-header':'guest-header'"></header>
     <div class="profile">
-        <img class="profile-maxi" src="#">
+        <img class="profile-maxi" th:src="@{/data/avatars/{i}.jpg(i=${author.getId()})}" onerror="this.onerror=null; this.src='/img/guest-icon.jpg'">
     </div>
     <div th:replace="fragments/about :: ${tracks!=null}? 'tracks':'info'" class="about"></div>
 </div>
