--- a/src/main/resources/static/styles/cssandjs/main.css
+++ b/src/main/resources/static/styles/cssandjs/main.css
@@ -662,3 +662,13 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+li .track .ok-button{
+  background-color:rgb(178, 241, 158);
+  color: white;
+  color:rgb(244, 254, 235);
+  border: 1px solid rgb(178, 241, 158);
+}
+li .track .ok-button:hover{
+  background-color:rgb(145, 237, 116);
+  color: white;
+}
