--- a/src/main/resources/templates/fragments/catalogue.html
+++ b/src/main/resources/templates/fragments/catalogue.html
@@ -91,6 +91,33 @@
                 </div>
             </div>
         </li>
+        <li th:fragment="moderation-list(requests)" th:each="r:${requests}"
+        th:with="track=${r.getKey()}, rid=${r.getValue()}">
+            <div class="track">
+                <div>
+                    <a th:href="@{/track/{u}(u=${track.getId()})}">
+                        <img th:src="@{/data/covers/{i}.jpg(i=${track.getId()})}" onerror="this.onerror=null; this.src='/img/track-icon.png'">
+                    </a>
+                </div>
+                <div class="info">
+                    <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
+                    <a th:text="${track.getAuthor().getLogin()}"
+                       th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
+                </div>
+                <div class="audio">
+                    <audio controls th:src="@{/data/previews/{i}.mp3(i=${track.getId()})}">audio is not supported</audio>
+                    <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
+                </div>
+                <div class="buttons">
+                    <form th:action="@{/moderation/{i}/approve(i=${rid})}" method="post">
+                        <button class="ok-button" name="ok">норм</button>
+                    </form>
+                    <form th:action="@{/moderation/{i}/decline(i=${rid})}" method="post">
+                        <button name="rejectionReason" class="delete" onclick="this.value = prompt('Enter something!');">отклонить</button>
+                    </form>
+                </div>
+            </div>
+        </li>
     </ul>
 </div>
 </body>
