--- a/src/main/resources/templates/fragments/catalogue.html
+++ b/src/main/resources/templates/fragments/catalogue.html
@@ -118,6 +118,27 @@
                 </div>
             </div>
         </li>
+        <li th:fragment="declined-list(requests)" th:each="r:${requests}" th:with="track=${r.getKey()}, reason=${r.getValue()}">
+            <div class="track">
+                <div>
+                    <a th:href="@{/track/{u}(u=${track.getId()})}">
+                        <img th:src="@{/data/covers/{i}.jpg(i=${track.getId()})}" onerror="this.onerror=null; this.src='/img/track-icon.png'">
+                    </a>
+                </div>
+                <div class="info">
+                    <a th:text="${track.getName()}" th:href="@{/track/{u}(u=${track.getId()})}">Название</a>
+                    <a th:text="${track.getAuthor().getLogin()}"
+                       th:href="@{/user/{u}(u=${track.getAuthor().getLogin()})}">Автор</a>
+                </div>
+                <div class="audio">
+                    <audio controls th:src="@{/data/previews/{i}.mp3(i=${track.getId()})}">audio is not supported</audio>
+                    <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
+                </div>
+            </div>
+            <h4 style="margin:10px; color:#AAA;">причина отказа</h4>
+            <p style="padding:10px;border-radius:4px; font-size:14px; border-bottom: 1px solid #AAA;" th:text="${reason}">
+            </p>
+        </li>
     </ul>
 </div>
 </body>
