--- a/src/main/resources/templates/fragments/edit.html
+++ b/src/main/resources/templates/fragments/edit.html
@@ -84,7 +84,7 @@
             </ul>
             <h3  style="background-color:rgb(250, 251, 177);font-weight: normal; color:rgb(181, 190, 128); margin-top:20px; border-bottom: none;" th:if="${pending.size()!=0}">В обработке</h3>
             <ul>
-                <li th:replace="fragments/catalogue :: edit-list(${pending})"></li>
+                <li th:replace="fragments/catalogue :: empty-list(${pending})"></li>
             </ul>
             <h3  style="background-color:rgb(251, 177, 177);font-weight: normal; color:rgb(153, 117, 117); margin-top:20px; border-bottom: none;" th:if="${declined.size()!=0}">Отклоненные</h3>
             <ul>
