--- a/src/main/resources/templates/fragments/searchbar.html
+++ b/src/main/resources/templates/fragments/searchbar.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <section th:fragment="searchbar" class="searchbar">
-        <form>
+        <form method="get">
             <div class="bar">
                 <input type="text" id="search" placeholder="поиск">
             </div>
