--- a/src/main/resources/templates/balance.html
+++ b/src/main/resources/templates/balance.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<label for="cardOwner">Владелец</label>
-			<input th:value="${paymentInfo.getCardOwner()}" type="text" id="cardOwner" name="cardOwner" maxlength="30" required>
+			<input th:value="${paymentInfo != null ? paymentInfo.getCardOwner() : ''}" type="text" id="cardOwner" name="cardOwner" maxlength="30" required>
 		</div>
 		<div>
 			<label for="cvv">CVV</label>
@@ -24,12 +24,12 @@
 		</div>
 		<div>
 			<label for="cardNumber">Номер</label>
-			<input th:value="${paymentInfo.getCardNumber()}" type="number" id="cardNumber" name="cardNumber" min="0" max="9999999999999999" oninput="if (this.value.length > 16) {this.value = this.value.slice(0,16);}" required>
+			<input th:value="${paymentInfo != null ? paymentInfo.getCardNumber() : ''}" type="number" id="cardNumber" name="cardNumber" min="0" max="9999999999999999" oninput="if (this.value.length > 16) {this.value = this.value.slice(0,16);}" required>
 		</div>
 		<div>
 			<label>Срок действия<br>
 			</label>
-			<select name="month" id="month" required th:with="m = ${paymentInfo.getExpireDate.getMonthValue()}">
+			<select name="month" id="month" required th:with="m = ${paymentInfo != null ? paymentInfo.getExpireDate.getMonthValue() : -1}">
 			  <option value="1" th:selected="${m==1}">Январь</option>
 				<option value="2" th:selected="${m==2}">Февраль </option>
 				<option value="3" th:selected="${m==3}">Март</option>
@@ -43,7 +43,7 @@
 				<option value="11" th:selected="${m==11}">Ноябрь</option>
 				<option value="12" th:selected="${m==12}">Декабрь</option>
 			</select>
-			<select name = "year" id="year" required th:with="y = ${paymentInfo.getExpireDate.getYear()}">
+			<select name = "year" id="year" required th:with="y = ${paymentInfo != null ? paymentInfo.getExpireDate.getYear() : -1}">
 				<option value="2022" th:selected="${y==2022}"> 2022</option>
 				<option value="2023" th:selected="${y==2023}"> 2023</option>
 				<option value="2024" th:selected="${y==2024}"> 2024</option>
@@ -56,11 +56,11 @@
 		</div>
 		<div>
 			<label for="address">Адрес</label>
-			<input th:value="${paymentInfo.getAddress()}" type="text" id="address" name="address" required>
+			<input th:value="${paymentInfo != null ? paymentInfo.getAddress() : ''}" type="text" id="address" name="address" required>
 		</div>
 		<div>
 			<label for="postalCode">Почтовый индекс</label>
-			<input th:value="${paymentInfo.getPostalCode()}" type="text" id="postalCode" name="postalCode" pattern="[0-9]{6}" maxlength="6" required>
+			<input th:value="${paymentInfo != null ? paymentInfo.getPostalCode() : ''}" type="text" id="postalCode" name="postalCode" pattern="[0-9]{6}" maxlength="6" required>
 		</div>
 		<div>
 			<input type="submit" id="confirm-purchase" value = "Оплатить">
