preview -> previews hotfix

--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="audio-less">
-                <audio controls th:src="@{/data/preview/{i}.mp3(i=${track.getId()})}">audio is not supported</audio>
+                <audio controls th:src="@{/data/previews/{i}.mp3(i=${track.getId()})}">audio is not supported</audio>
                 <p th:text="${track.getGenre()}+' / '+${track.getMood()}">джаз/грусть</p>
             </div>
             <div class="buttons">
