--- a/src/main/resources/templates/userNotFound.html
+++ b/src/main/resources/templates/userNotFound.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>main</title>
     <link rel="stylesheet" th:href="@{/styles/cssandjs/main.css}" href="../static/styles/cssandjs/main.css">
+    <link rel="shortcut icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 </head>
 <body>
   <div style="height: 300px; width:500px;border:5px solid red; " class="container">
