--- a/src/main/resources/templates/track-upload.html
+++ b/src/main/resources/templates/track-upload.html
@@ -17,15 +17,15 @@
                     <h3 style="margin-top:40px;">Загрузить обложку</h3>
 
                     <div class="underbox marginBottom">
-                        <input class="upload-photo" type="file" name="cover" accept="image/jpeg"/ required>
+                        <input class="upload-photo" type="file" name="cover" accept="image/jpeg" required>
                     </div>
                     <h3>Загрузить трек</h3>
                     <div class="underbox marginBottom">
-                        <input class="upload-photo" type="file" name="original" accept="audio/x-mpeg"/ required>
+                        <input class="upload-photo" type="file" name="original" accept="audio/x-mpeg" required>
                     </div>
                     <h3>Загрузить превью</h3>
                     <div class="underbox marginBottom">
-                        <input class="upload-photo" type="file" name="preview" accept="audio/x-mpeg"/ required>
+                        <input class="upload-photo" type="file" name="preview" accept="audio/x-mpeg" required>
                     </div>
                     <label for="name"><h3>Название</h3></label>
                     <input type="text" name="name" id="name" maxlength="30" required>
