--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -113,7 +113,7 @@
     </p>
 
     <label for="username">Логин:</label>
-    <input type="text" placeholder="abobus" name="username" id="username">
+    <input type="text" placeholder="логин" name="username" id="username">
     <label for="password">Пароль:</label>
     <input type="password" placeholder="*****" name="password" id="password">
     <input type="submit" value="Вход">
